// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useHeaderSetup should handle a string as headerConfig 1`] = `
<Header
  title="test"
/>
`;

exports[`useHeaderSetup should update the header with the headerConfig 1`] = `
<Header
  hideGoBackButton={true}
  theme="default"
  title="test"
/>
`;
